# prism

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
examples/: example_master_resume.json
resume_agent/: __init__.py  cv_builder.py  freetier.py  parser.py  pipeline.py  prompts.py  schema.py  selector.py
templates/: master_resume_template.json
