[project]
name = "prism"
version = "0.1.0"
description = "Prism — one resume in, every angle out. Multi-track CV generator for multi-domain professionals."
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.35.0",
    "python-docx>=1.1.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["resume_agent"]
